# MailSandbox-core

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  t_pysql.py
appendix/: attachmentValue.json  attatchment.json  messageValue.json  messages.json  parameter.md
src/: getmail.py  kowala-396107-cd92e9e2bf76.json  main.py  t_graphtoken.py  t_minIO.py  t_pysql.py  t_yamlReader.py  test.py  test_getmail.py
src/data/b98411b4-a08a-424f-9a06-4a8d9bbed362/: hkcc_differences.txt  hkcr_differences.txt  hkcu_differences.txt  hklm_differences.txt  hku_differences.txt  pdfparser.txt  trid.txt
src/static/: index.html
